--- a/sir-example.Rmd
+++ b/sir-example.Rmd
@@ -16,7 +16,7 @@ library(deSolve)
 ### Specify parameters
 
 ## Proportion in each compartment: Susceptible 0.999999, Infected 0.000001, Recovered 0 (these are directly from the example linked above)
-init <- c(S = 1-1e-6, I = 1e-6, R = 0.0)
+init <- c(S = .7, I = 0.3, R = 0)
 
 ## beta: infection parameter; gamma: recovery parameter
 parameters <- c(beta = 2.316, gamma = 0.261)
@@ -29,6 +29,7 @@ times      <- seq(0, 100, by = 0.5)
 
 ```{r}
 ## Build the function with all 
+# create function with time, initial proportions, and paramaters
 sir <- function(time, init, parameters) {
 
   with(as.list(c(init, parameters)), {
